@@ -1,3 +1,10 @@
+2008-11-20 Og Maciel <ogmaciel@gnome.org>
+
+	* src/gui/adddialog.py: Handle adding repeating records.
+	* src/gui/widgets/datepicker.py: Emmit signal when data is changed.
+	* src/gui/maindialog.py: Code cleanup; update endDate when dueDate is changed.
+	* src/lib/scheduler.py: Code cleanupand improvements for date handling functions.
+
 2008-11-19 Og Maciel <ogmaciel@gnome.org>
 
 	* src/gui/adddialog.py: Make 'notes' widget scroll when number of lines go beyond the widget's
